# avan

./: .env.example  .gitignore  CLAUDE.md  README.md  STRATEGY.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml  seed_data.py
backend/src/: main.py
backend/src/agents/: __init__.py
backend/src/agents/triage/: __init__.py  fewshot.py  graph.py  state.py
backend/src/agents/triage/nodes/: __init__.py  classify.py  decide.py  draft.py  relate.py
backend/src/agents/triage/prompts/: classify.py  draft.py
backend/src/core/: __init__.py  database.py  llm.py  tts.py
backend/src/models/: __init__.py  briefing.py  message.py  override.py  rule.py
backend/src/routers/: __init__.py  briefing.py  messages.py  rules.py  tts.py
backend/src/services/: __init__.py  briefing_service.py  triage_service.py
frontend/: index.html  package.json
frontend/src/: App.vue  api.js  labels.js  main.js
frontend/src/components/: FireBar.vue  MessageList.vue
frontend/src/stores/: briefing.js  messages.js
frontend/src/views/: BriefingView.vue  FeedView.vue  RespondView.vue  RulesView.vue  TimelineView.vue
