[project]
name = "nava-backend"
version = "0.1.0"
description = "Nava Property Management API"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "pydantic>=2.5.3",
    "python-multipart>=0.0.6",
    "motor>=3.3.2",
    "beanie>=1.24.0",
    "langchain-openai>=0.3.0",
    "langgraph>=0.3.0",
    "langchain-core>=0.3.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = []
